--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,7 +1,17 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-span[epub|type~="subtitle"]{
-	display: block;
-	font-weight: normal;
+[epub|type~="z3998:verse"] p {
+    text-align: left;
+    text-indent: 0;
+}
+
+.advertisement {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.advertisement > p {
+    text-align: center;
+    text-indent: 0;
 }
