--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,9 +1,21 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-[epub|type~="z3998:verse"] p{
+[epub|type~="z3998:verse"] p,
+[epub|type~="z3998:song"] p{
 	text-align: initial;
 	text-indent: 0;
+}
+
+[epub|type~="z3998:verse"] p > span,
+[epub|type~="z3998:song"] p > span{
+	display: block;
+	text-indent: -1em;
+	padding-left: 1em;
+}
+
+[epub|type~="z3998:song"] p > span + br{
+	display: none;
 }
 
 .advertisement{
