Markup the advertisement
Remove custom class "advertisement"

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -18,12 +18,12 @@
 	display: none;
 }
 
-.advertisement{
+#chapter-1-4 > blockquote{
 	padding-top: 2em;
 	padding-bottom: 2em;
 }
 
-.advertisement > p{
+#chapter-1-4 > blockquote > p{
 	text-align: center;
 	text-indent: 0;
 }
